--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/mdx": "^4.2.4",
+		"@astrojs/mdx": "^4.3.0",
 		"@astrojs/rss": "^4.0.11",
-		"@astrojs/sitemap": "^3.3.0",
-		"astro": "^5.7.3",
-		"typescript": "^5.4.5"
+		"@astrojs/sitemap": "^3.4.0",
+		"@builder.io/qwik": "^1.14.1",
+		"@qwikdev/astro": "^0.8.0",
+		"astro": "^5.8.0",
+		"typescript": "^5.8.3"
 	}
 }
